11892 ahciem doesn't properly check if enclosure services are present Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: John Levon <john.levon@joyent.com> Approved by: Joshua M. Clulow <josh@sysmgr.org>